{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 65,
  "lineage": "aeaffc51-4fca-536f-9819-4f3022fac1d8",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/loadBalancers/walmart-dev-web-load-balancer/frontendIPConfigurations/frontendip",
                "name": "frontendip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/publicIPAddresses/walmart-dev-lbpublicip"
              }
            ],
            "id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/loadBalancers/walmart-dev-web-load-balancer",
            "location": "eastus",
            "name": "walmart-dev-web-load-balancer",
            "resource_group_name": "walmart-dev-resource-group-load-balncer",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.web_lb_publicip",
            "azurerm_resource_group.rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "web_lb_backendpool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/loadBalancers/walmart-dev-web-load-balancer/backendAddressPools/web-lb-backendpool",
            "loadbalancer_id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/loadBalancers/walmart-dev-web-load-balancer",
            "name": "web-lb-backendpool"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_public_ip.web_lb_publicip",
            "azurerm_resource_group.rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_nat_rule",
      "name": "nat_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/loadBalancers/walmart-dev-web-load-balancer/frontendIPConfigurations/frontendip",
            "frontend_ip_configuration_name": "frontendip",
            "frontend_port": 1022,
            "id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/loadBalancers/walmart-dev-web-load-balancer/inboundNatRules/vm-0-ssh-1022-vm-22",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/loadBalancers/walmart-dev-web-load-balancer",
            "name": "vm-0-ssh-1022-vm-22",
            "protocol": "Tcp",
            "resource_group_name": "walmart-dev-resource-group-load-balncer"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_linux_virtual_machine.linuxvm_vm",
            "azurerm_network_interface.web_linuxvn_ni",
            "azurerm_public_ip.web_lb_publicip",
            "azurerm_resource_group.rg_name",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/loadBalancers/walmart-dev-web-load-balancer/frontendIPConfigurations/frontendip",
            "frontend_ip_configuration_name": "frontendip",
            "frontend_port": 2022,
            "id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/loadBalancers/walmart-dev-web-load-balancer/inboundNatRules/vm-1-ssh-2022-vm-22",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/loadBalancers/walmart-dev-web-load-balancer",
            "name": "vm-1-ssh-2022-vm-22",
            "protocol": "Tcp",
            "resource_group_name": "walmart-dev-resource-group-load-balncer"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_linux_virtual_machine.linuxvm_vm",
            "azurerm_network_interface.web_linuxvn_ni",
            "azurerm_public_ip.web_lb_publicip",
            "azurerm_resource_group.rg_name",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "web_lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/loadBalancers/walmart-dev-web-load-balancer/probes/web-lb-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/loadBalancers/walmart-dev-web-load-balancer",
            "name": "web-lb-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_public_ip.web_lb_publicip",
            "azurerm_resource_group.rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "web_lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/loadBalancers/walmart-dev-web-load-balancer/backendAddressPools/web-lb-backendpool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/loadBalancers/walmart-dev-web-load-balancer/frontendIPConfigurations/frontendip",
            "frontend_ip_configuration_name": "frontendip",
            "frontend_port": 80,
            "id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/loadBalancers/walmart-dev-web-load-balancer/loadBalancingRules/web-lb-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/loadBalancers/walmart-dev-web-load-balancer",
            "name": "web-lb-rule",
            "probe_id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/loadBalancers/walmart-dev-web-load-balancer/probes/web-lb-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backendpool",
            "azurerm_lb_probe.web_lb_probe",
            "azurerm_public_ip.web_lb_publicip",
            "azurerm_resource_group.rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_linuxvn_ni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/networkInterfaces/web-linuxvm-nw-interface-0",
            "internal_domain_name_suffix": "jh5p2wwfl4vutpqbakcjguwgoa.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-linuxvm-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/virtualNetworks/walmart-dev-vnet-lb/subnets/web-subnet"
              }
            ],
            "location": "eastus",
            "name": "web-linuxvm-nw-interface-0",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "walmart-dev-resource-group-load-balncer"
          },
          "dependencies": [
            "azurerm_resource_group.rg_name",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/networkInterfaces/web-linuxvm-nw-interface-1",
            "internal_domain_name_suffix": "jh5p2wwfl4vutpqbakcjguwgoa.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-linuxvm-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/virtualNetworks/walmart-dev-vnet-lb/subnets/web-subnet"
              }
            ],
            "location": "eastus",
            "name": "web-linuxvm-nw-interface-1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "walmart-dev-resource-group-load-balncer"
          },
          "dependencies": [
            "azurerm_resource_group.rg_name",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "web_lb_backendpool_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/loadBalancers/walmart-dev-web-load-balancer/backendAddressPools/web-lb-backendpool",
            "id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/networkInterfaces/web-linuxvm-nw-interface-0/ipConfigurations/web-linuxvm-ipconfig|/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/loadBalancers/walmart-dev-web-load-balancer/backendAddressPools/web-lb-backendpool",
            "ip_configuration_name": "web-linuxvm-ipconfig",
            "network_interface_id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/networkInterfaces/web-linuxvm-nw-interface-0"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backendpool",
            "azurerm_network_interface.web_linuxvn_ni",
            "azurerm_public_ip.web_lb_publicip",
            "azurerm_resource_group.rg_name",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/loadBalancers/walmart-dev-web-load-balancer/backendAddressPools/web-lb-backendpool",
            "id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/networkInterfaces/web-linuxvm-nw-interface-1/ipConfigurations/web-linuxvm-ipconfig|/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/loadBalancers/walmart-dev-web-load-balancer/backendAddressPools/web-lb-backendpool",
            "ip_configuration_name": "web-linuxvm-ipconfig",
            "network_interface_id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/networkInterfaces/web-linuxvm-nw-interface-1"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backendpool",
            "azurerm_network_interface.web_linuxvn_ni",
            "azurerm_public_ip.web_lb_publicip",
            "azurerm_resource_group.rg_name",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_nat_rule_association",
      "name": "lb_nat_rule_associa",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/networkInterfaces/web-linuxvm-nw-interface-0/ipConfigurations/web-linuxvm-ipconfig|/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/loadBalancers/walmart-dev-web-load-balancer/inboundNatRules/vm-0-ssh-1022-vm-22",
            "ip_configuration_name": "web-linuxvm-ipconfig",
            "nat_rule_id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/loadBalancers/walmart-dev-web-load-balancer/inboundNatRules/vm-0-ssh-1022-vm-22",
            "network_interface_id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/networkInterfaces/web-linuxvm-nw-interface-0"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_nat_rule.nat_rule",
            "azurerm_linux_virtual_machine.linuxvm_vm",
            "azurerm_network_interface.web_linuxvn_ni",
            "azurerm_public_ip.web_lb_publicip",
            "azurerm_resource_group.rg_name",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/networkInterfaces/web-linuxvm-nw-interface-1/ipConfigurations/web-linuxvm-ipconfig|/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/loadBalancers/walmart-dev-web-load-balancer/inboundNatRules/vm-1-ssh-2022-vm-22",
            "ip_configuration_name": "web-linuxvm-ipconfig",
            "nat_rule_id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/loadBalancers/walmart-dev-web-load-balancer/inboundNatRules/vm-1-ssh-2022-vm-22",
            "network_interface_id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/networkInterfaces/web-linuxvm-nw-interface-1"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_nat_rule.nat_rule",
            "azurerm_linux_virtual_machine.linuxvm_vm",
            "azurerm_network_interface.web_linuxvn_ni",
            "azurerm_public_ip.web_lb_publicip",
            "azurerm_resource_group.rg_name",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/networkSecurityGroups/web-subnet-nsg",
            "location": "eastus",
            "name": "web-subnet-nsg",
            "resource_group_name": "walmart-dev-resource-group-load-balncer",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg_name",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "webnsgrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/networkSecurityGroups/web-subnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "web-subnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "walmart-dev-resource-group-load-balncer",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_nsg",
            "azurerm_resource_group.rg_name",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "101",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/networkSecurityGroups/web-subnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "web-subnet-nsg",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "walmart-dev-resource-group-load-balncer",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_nsg",
            "azurerm_resource_group.rg_name",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_lb_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/publicIPAddresses/walmart-dev-lbpublicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "137.117.70.78",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "walmart-dev-lbpublicip",
            "resource_group_name": "walmart-dev-resource-group-load-balncer",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "owner": "walmart",
              "team": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/virtualNetworks/walmart-dev-vnet-lb/subnets/web-subnet",
            "name": "web-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "walmart-dev-resource-group-load-balncer",
            "virtual_network_name": "walmart-dev-vnet-lb"
          },
          "dependencies": [
            "azurerm_resource_group.rg_name",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "websunetnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/virtualNetworks/walmart-dev-vnet-lb/subnets/web-subnet",
            "network_security_group_id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/networkSecurityGroups/web-subnet-nsg",
            "subnet_id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/virtualNetworks/walmart-dev-vnet-lb/subnets/web-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web_nsg",
            "azurerm_resource_group.rg_name",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "5afefe49-5fc5-49ab-be01-02849352c670",
            "id": "/subscriptions/de649893-9e5f-4ac4-8149-02d1037a5513/resourceGroups/walmart-dev-resource-group-load-balncer/providers/Microsoft.Network/virtualNetworks/walmart-dev-vnet-lb",
            "location": "eastus",
            "name": "walmart-dev-vnet-lb",
            "resource_group_name": "walmart-dev-resource-group-load-balncer",
            "tags": {
              "owner": "walmart",
              "team": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg_name"
          ]
        }
      ]
    }
  ]
}